<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:gravity="top"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            android:fontFamily="@font/poppins_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textField"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/light_blue_dark"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:text="@string/check"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />


    <ImageView
        android:id="@+id/img_ok"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ok"
        android:layout_below="@id/btn_check"
        android:contentDescription="@string/ok"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="12dp"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/img_not_ok"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/not_ok"
        android:layout_below="@id/btn_check"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/not_ok"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_aman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_aman"
        android:layout_below="@id/img_ok"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/green_success"
        android:gravity="center" />

    <TextView
        android:id="@+id/kata_kasar_detected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kata_kasar_detected"
        android:layout_below="@id/img_not_ok"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"/>

    <TextView
        android:id="@+id/langgar_pasal_detected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/langgar_pasal_detected"
        android:layout_below="@id/kata_kasar_detected"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/light_blue_primary"
        android:gravity="center" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/langgar_pasal_detected"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/pasal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pasal"
                    android:textColor="@color/light_blue_dark"
                    android:fontFamily="@font/poppins_bold"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />
                <TextView
                    android:id="@+id/penjelasan_pasal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/penjelasan_pasal"
                    android:fontFamily="@font/poppins_regular"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>